# voice-connect

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEEPEVAL_NOTES.md  Dockerfile  GETTING_STARTED.md  Makefile  NOVA_SONIC_INTEGRATION.md  PROMPT_TESTING_GUIDE.md  QUICKSTART.md  README.md  REPOSITORY_TREE.txt  __init__.py  docker-compose.yml  pyproject.toml
.claude/agents/: code-reviewer.md  test-runner-fixer.md
.github/workflows/: ci.yml
aws/: __init__.py
aws/connect_lambda/: Dockerfile  __init__.py  handler.py
scripts/: create_dynamodb_table.sh  deploy_lambda.sh
services/gateway/: __init__.py  app.py  app_pipecat.py  session_manager.py  stream_handler.py
services/orchestrator/: README_PROMPTS.md  __init__.py  airtable_client.py  document_transformer.py  dynamo_repository.py  escalation.py  hubspot_client.py  ingestion_orchestrator.py  kb_repository.py  nova_sonic.py  openai_realtime.py  orchestrator.py  prompts.py  s3_uploader.py  token_generator.py  tool_executor.py  tools.py  voice_client_base.py
services/orchestrator/prompts/: default.md  qld_intake copy.md  sales.md  technical.md
services/pipecat/: README.md  __init__.py  escalation_processor.py  pipeline_factory.py
shared/: __init__.py  aws_clients.py  config.py  langfuse_tracing.py  logging.py  types.py
terraform/: .gitignore  DEPLOYMENT_GUIDE.md  README.md  SECURITY.md  alb.tf  dynamodb.tf  ecr.tf  ecs.tf  iam.tf  knowledge_base.tf  lambda.tf  locals.tf  monitoring.tf  outputs.tf  providers.tf  secrets.tf  terraform.tfvars.example  validate.tfvars  variables.tf  versions.tf  vpc.tf
tests/: __init__.py
tests/unit/: test_connect_lambda.py  test_dynamo_repository.py  test_escalation.py  test_hubspot_client.py  test_pipecat_pipeline.py  test_prompts.py  test_token_generator.py
